# PAB

./: .gitignore  README.md  main.py  pyproject.toml  remote-deploy.fish  test.py
config/: config_bert.json  mobile-clip2.yaml  siglip2.yaml  siglip2itm.yaml
dataset/: __init__.py  dataset.py  eda.py  search_dataset.py  utils.py
evaluate/: __init__.py  evaluate.py
models/: bert.py  mobileclip.py  siglip2.py  siglip2cmp.py  siglip2itm.py
tests/: mobileclip.py  test.py  test_siglip2cmp.py  test_siglip2itm.py  utils.py
